# Easy2FA

./: README.md  pyproject.toml
easy2fa/: __init__.py  core.py
easy2fa.egg-info/: PKG-INFO  SOURCES.txt
